--- a/src/stylesheets/general.css
+++ b/src/stylesheets/general.css
@@ -3,7 +3,8 @@
 *::before {
   margin: 0;
   padding: 0;
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
   font-family: sans-serif;
 }
 
@@ -14,12 +15,22 @@
 body {
   height: 100vh;
   color: var(--text-color);
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   position: relative;
+  background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.4)), to(rgba(0, 0, 0, 0.4))),
+    url(../images/rainy.jpg);
+  background-image: -o-linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)),
+    url(../images/rainy.jpg);
   background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)),
     url(../images/rainy.jpg);
   background-size: cover;
   background-position: center;
   overflow: hidden;
-  transition: 1.3s;
+  /* transition: 1.3s; */
+}
+
+input{
+  font-size: 1rem;
 }
