fixed some bugs

--- a/src/stylesheets/sidebar.css
+++ b/src/stylesheets/sidebar.css
@@ -2,7 +2,7 @@ aside {
   width: 350px;
   background-color: rgba(255, 255, 255, 0.148);
   -webkit-backdrop-filter: blur(10px);
-          backdrop-filter: blur(10px);
+  backdrop-filter: blur(10px);
 }
 
 aside > .contents {
@@ -11,11 +11,11 @@ aside > .contents {
   display: flex;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
   -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
 }
 
 aside > .contents > .top {
@@ -27,11 +27,11 @@ aside > .contents > .top {
   display: flex;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
   -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
 }
 
 input {
@@ -73,19 +73,19 @@ aside .line {
 
 aside > .contents > .bottom {
   -webkit-box-flex: 1;
-      -ms-flex: 1;
-          flex: 1;
+  -ms-flex: 1;
+  flex: 1;
   width: 100%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
   -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
 }
 
 h5 {
@@ -99,8 +99,8 @@ h5 {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
 }
 
 aside .fore-casts {
@@ -111,11 +111,11 @@ aside .fore-casts {
   display: flex;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
   -webkit-box-pack: start;
-      -ms-flex-pack: start;
-          justify-content: flex-start;
+  -ms-flex-pack: start;
+  justify-content: flex-start;
 }
 
 aside .fore-cast {
@@ -137,16 +137,16 @@ aside .fore-cast:nth-child(3) {
   width: 50px;
   height: 50px;
   -webkit-backdrop-filter: blur(30px);
-          backdrop-filter: blur(30px);
+  backdrop-filter: blur(30px);
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
   -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
   border-radius: 5px;
 }
 
@@ -160,11 +160,11 @@ aside .fore-cast:nth-child(3) {
   display: flex;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
   -webkit-box-pack: start;
-      -ms-flex-pack: start;
-          justify-content: flex-start;
+  -ms-flex-pack: start;
+  justify-content: flex-start;
   margin-left: 20px;
   margin-top: 3px;
   letter-spacing: 1.2px;
@@ -183,13 +183,13 @@ aside .fore-cast:nth-child(3) {
 /* phone-layouts */
 
 nav {
-  position: fixed;
+  position: absolute;
   top: 0;
-  width: 100dvw;
+  width: 100%;
   height: 100px;
   -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
   z-index: 10;
   display: none;
   -webkit-transition: 2s ease all;
@@ -213,22 +213,22 @@ nav button {
   cursor: pointer;
   background-color: hsla(0, 0%, 100%, 0.156);
   -webkit-backdrop-filter: blur(15px);
-          backdrop-filter: blur(15px);
+  backdrop-filter: blur(15px);
 }
 
 nav > .right {
   -webkit-box-flex: 1;
-      -ms-flex: 1;
-          flex: 1;
+  -ms-flex: 1;
+  flex: 1;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: end;
-      -ms-flex-pack: end;
-          justify-content: flex-end;
+  -ms-flex-pack: end;
+  justify-content: flex-end;
   -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
   margin-right: 20px;
   font-size: 1.3rem;
   color: var(--text-color);
@@ -243,7 +243,7 @@ nav > .right {
 .dropdown {
   background-color: rgba(240, 248, 255, 0.069);
   -webkit-backdrop-filter: filter(15px);
-          backdrop-filter: filter(15px);
+  backdrop-filter: filter(15px);
   position: fixed;
   top: -130px;
   width: 100dvw;
@@ -252,11 +252,11 @@ nav > .right {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
   -webkit-box-pack: start;
-      -ms-flex-pack: start;
-          justify-content: flex-start;
+  -ms-flex-pack: start;
+  justify-content: flex-start;
   padding-left: 50px;
   z-index: 100;
   -webkit-transition: 1.5s ease all;
@@ -297,7 +297,7 @@ nav > .right {
   cursor: pointer;
   background-color: hsla(0, 0%, 100%, 0.156);
   -webkit-backdrop-filter: blur(15px);
-          backdrop-filter: blur(15px);
+  backdrop-filter: blur(15px);
   margin-left: 50px;
   margin-right: 10px;
 }
