--- a/src/stylesheets/media.css
+++ b/src/stylesheets/media.css
@@ -1,11 +1,11 @@
 @media (max-width: 900px) {
   body {
     background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.4)), to(rgba(0, 0, 0, 0.4))),
-      url(../images/background-phone.jpg);
+      url(../images/cloudy.jpg);
     background-image: -o-linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)),
-      url(../images/background-phone.jpg);
+      url(../images/cloudy.jpg);
     background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)),
-      url(../images/background-phone.jpg);
+      url(../images/cloudy.jpg);
   }
 
   aside {
