--- a/src/stylesheets/sidebar.css
+++ b/src/stylesheets/sidebar.css
@@ -244,9 +244,9 @@ nav > .right {
   background-color: rgba(240, 248, 255, 0.069);
   -webkit-backdrop-filter: filter(15px);
   backdrop-filter: filter(15px);
-  position: fixed;
+  position: absolute;
   top: -130px;
-  width: 100dvw;
+  width: 100%;
   height: 100px;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -258,6 +258,7 @@ nav > .right {
   -ms-flex-pack: start;
   justify-content: flex-start;
   padding-left: 50px;
+  padding-right: 50px;
   z-index: 100;
   -webkit-transition: 1.5s ease all;
   -o-transition: 1.5s ease all;
