--- a/src/stylesheets/sidebar.css
+++ b/src/stylesheets/sidebar.css
@@ -182,72 +182,12 @@ aside .fore-cast:nth-child(3) {
 
 /* phone-layouts */
 
-nav {
-  position: absolute;
-  top: 0;
-  width: 100%;
-  height: 100px;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
-  z-index: 10;
-  display: none;
-  -webkit-transition: 2s ease all;
-  -o-transition: 2s ease all;
-  transition: 2s ease all;
-  display: none;
-}
-
-nav > .left {
-  margin-left: 30px;
-}
-
-nav button {
-  background: none;
-  border: none;
-  color: var(--text-color);
-  width: 50px;
-  height: 50px;
-  border-radius: 10px;
-  font-size: 1.5rem;
-  cursor: pointer;
-  background-color: hsla(0, 0%, 100%, 0.156);
-  -webkit-backdrop-filter: blur(15px);
-  backdrop-filter: blur(15px);
-}
-
-nav > .right {
-  -webkit-box-flex: 1;
-  -ms-flex: 1;
-  flex: 1;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: end;
-  -ms-flex-pack: end;
-  justify-content: flex-end;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
-  margin-right: 20px;
-  font-size: 1.3rem;
-  color: var(--text-color);
-}
-
-.fa-location-dot {
-  margin-left: 15px;
-}
-
 /* dropdown */
 
 .dropdown {
-  background-color: rgba(240, 248, 255, 0.069);
-  -webkit-backdrop-filter: filter(15px);
-  backdrop-filter: filter(15px);
-  position: absolute;
-  top: -130px;
-  width: 100%;
-  height: 100px;
+  position: fixed;
+  top: 0;
+  padding: 30px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -256,17 +196,11 @@ nav > .right {
   align-items: center;
   -webkit-box-pack: start;
   -ms-flex-pack: start;
-  justify-content: flex-start;
+  justify-content: flex-end;
+  width: 100%;
   padding-left: 50px;
-  padding-right: 50px;
   z-index: 100;
-  -webkit-transition: 1.5s ease all;
-  -o-transition: 1.5s ease all;
-  transition: 1.5s ease all;
-}
-
-.show {
-  top: 0;
+  display: none;
 }
 
 .dropdown button {
@@ -284,21 +218,13 @@ nav > .right {
 .dropdown input[type="search"] {
   border: 1px solid var(--text-color);
   height: 40px;
-  margin-right: 40px;
+  margin-right: 20px;
+  max-width: 200px;
 }
 
-.chev {
-  background: none;
-  border: none;
-  color: var(--text-color);
-  width: 50px;
-  height: 50px;
-  border-radius: 10px;
-  font-size: 1.5rem;
-  cursor: pointer;
-  background-color: hsla(0, 0%, 100%, 0.156);
-  -webkit-backdrop-filter: blur(15px);
-  backdrop-filter: blur(15px);
-  margin-left: 50px;
-  margin-right: 10px;
+.dropdown .right {
+  display: flex;
+  gap: 1rem;
+  padding-right: 20px;
+  margin-right: 20px;
 }
