--- a/src/stylesheets/general.css
+++ b/src/stylesheets/general.css
@@ -21,11 +21,11 @@ body {
   display: flex;
   position: relative;
   background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.4)), to(rgba(0, 0, 0, 0.4))),
-    url(../images/cloudy.jpg);
+    url(../images/rainy.jpg);
   background-image: -o-linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)),
-    url(../images/cloudy.jpg);
+    url(../images/rainy.jpg);
   background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)),
-    url(../images/cloudy.jpg);
+    url(../images/rainy.jpg);
   background-size: cover;
   background-position: center;
   overflow-x: hidden;
