--- a/src/stylesheets/sidebar.css
+++ b/src/stylesheets/sidebar.css
@@ -196,9 +196,10 @@ aside .fore-cast:nth-child(3) {
   align-items: center;
   -webkit-box-pack: start;
   -ms-flex-pack: start;
-  justify-content: flex-end;
+  justify-content: center;
   width: 100%;
-  padding-left: 50px;
+  /* padding-left: 50px;
+  padding-right: 50px; */
   z-index: 100;
   display: none;
 }
