added an overflow hidden

--- a/src/stylesheets/general.css
+++ b/src/stylesheets/general.css
@@ -28,7 +28,7 @@ body {
     url(../images/rainy.jpg);
   background-size: cover;
   background-position: center;
-  overflow-x: hidden;
+  overflow: hidden;
   /* transition: 1.3s; */
 }
 
